--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "upstream"]
 	path = upstream
-	url = git@github.com:KhronosGroup/Vulkan-Headers.git
+	url = https://github.com/KhronosGroup/Vulkan-Headers
